# databench

./: Dockerfile  Job.yaml  README.md  build_and_push.ps1  generator.go  generator_test.go  go.mod  go.sum  kafka.go  main.go
databench-rs/: Cargo.toml  Dockerfile
databench-rs/src/: generator.rs  main.rs  powerplant.rs
databench_rs/: Cargo.toml  Dockerfile
databench_rs/_old/: generator.rs  main.rs  powerplant.rs
databench_rs/benches/: benchmarks.rs
databench_rs/src/: helper.rs  lib.rs
databench_rs/src/generator/: mod.rs
databench_rs/src/generator/chernobyl/: json_struct.rs  mod.rs  powerplant.json
databench_rs/src/receiver/: kafka.rs  mod.rs  mqtt.rs
databench_rs/src/sender/: kafka.rs  mod.rs
databench_rs/src/tests/: kafka_to_kafka.rs  kafka_to_mqtt.rs  mod.rs
golang/: Dockerfile  generator.go  run.sh
golang/powerplant/: powerplant.json
powerplant/: powerplant.go  powerplant_test.go
