[package]
name = "databench-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.104"
env_logger = "0.10.0"
rand = "0.8.5"
log = "0.4.19"

[dependencies.rdkafka]
version = "0.33.2"
features = ["cmake-build"]


[dependencies.serde]
version = "1.0.183"
features = ["derive"]
